// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test lexer initial state parse asp echo tag 1`] = `
Program {
  "children": Array [
    Echo {
      "expressions": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse asp tag 1`] = `
Program {
  "children": Array [
    Echo {
      "expressions": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short echo 1`] = `
Program {
  "children": Array [
    Echo {
      "expressions": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short tag 1`] = `
Program {
  "children": Array [
    Echo {
      "expressions": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer test #148 - sensitive lexer 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  Array [
    "T_VARIABLE",
    "$this",
    1,
  ],
  Array [
    "T_OBJECT_OPERATOR",
    "->",
    1,
  ],
  Array [
    "T_WHITESPACE",
    " ",
    1,
  ],
  Array [
    "T_STRING",
    "list",
    1,
  ],
  ";",
]
`;

exports[`Test lexer test comments 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "value": "
      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": Array [
        CommentLine {
          "kind": "commentline",
          "offset": 20,
          "value": "// simple comment ",
        },
      ],
      "raw": "
      ",
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": Array [
        CommentLine {
          "kind": "commentline",
          "offset": 57,
          "value": "// another line ",
        },
      ],
      "raw": "
      ",
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "leadingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "offset": 92,
          "value": "/**/",
        },
      ],
      "raw": "
      ",
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "offset": 112,
          "value": "// last comment
",
        },
      ],
      "value": "      ",
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "offset": 20,
      "value": "// simple comment ",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 57,
      "value": "// another line ",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 92,
      "value": "/**/",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 112,
      "value": "// last comment
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer test tokens 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php
",
    1,
  ],
  Array [
    "T_ECHO",
    "echo",
    2,
  ],
  Array [
    "T_WHITESPACE",
    " ",
    2,
  ],
  Array [
    "T_VARIABLE",
    "$var",
    2,
  ],
  ";",
]
`;

exports[`Test lexer test unput on whitespace 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  Array [
    "T_WHITESPACE",
    "
	 ",
    1,
  ],
]
`;
